# flatsphere

./: CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  idf_component.yml  main.cpp
main/hal/: hal_185c.cpp  hal_185c.h
main/hal/bat/: battery.cpp  battery.hpp
main/hal/display/: display.cpp  display.hpp
main/hal/mic/: mic.hpp
main/hal/speaker/: speaker.cpp  speaker.hpp
main/ui/: ui_helpers.h
main/ui/screens/: ui_SetDate.c  ui_SetTime.c  ui_WatchFace.c
